2003-01-23  Zoltan Varga  <vargaz@freemail.hu>

	* Type.cs (IsInstanceOfType): fixed regression caused by the change
	to IsSubclassOf().

2003-01-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoType.cs: re-added lines that were removed in the previous commit.

2003-01-16  Lluis Sanchez Gual <lsg@ctv.es>

	* Type.cs: corrected property IsSerializable. It should always return
	true for enums and delegates
	* MonoType.cs: added serialization support.
	* Delegate.cs: added serialization support.
	* DBNull.cs: added serialization support.
	* UnitySerializationHolder.cs: supports serialization of Assembly,
	MonoType and DBNull.
	* DelegateSerializationHolder.cs: added.

2003-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Exception.cs: changed default message to match MS one.

2003-01-12  Patrik Torstensson <totte@race-x-change.com>

	* String.cs: Fixed bug with CompareOrdinal

2003-01-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Enum.cs: implements IFormattable.

2003-01-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AppDomain.cs: implemented DoCallBack method.
	* MonoType.cs:
	(GetConstructorImpl): when the flag is BindingFlags.Default, set it to
	Public, Instance.

	NUnit2 tests start moving.

2003-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Activator.cs: fixed bug #36052. Also added checks to avoid trying to
	instantiate an abstract class.

2003-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Type.cs:
	(IsSubclassOf): return false when null. Use != instead of Equals.

2003-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Type.cs: fixed IsSubclassOf. Patch from Zoltan Varga.

Fri Jan 3 20:18:51 CET 2003 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs: fixed Namespace property for nested types.

Fri Jan 3 16:18:27 CET 2003 Paolo Molaro <lupus@ximian.com>

	* MonoCustomAttrs.cs: create properly typed arrays when returning
	arrays of attributes of a given type.
